@@ -24,6 +24,7 @@
 - fix error handling of is_mounted().
 - Add a mode option for master map entries.
 - define monotonic clock helper functions.
+- use monotonic clock for alarm thread condition wait.
 
 21/04/2015 autofs-5.1.1
 =======================
